objects/VisitOps__Expense__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Arrival_Date_Location__c</fullName>
        <formula>DATETIMEVALUE( VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c  )</formula>
        <label>Arrival Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Attendee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Attendee for capturing gifts.</description>
        <label>Attendee Name</label>
        <referenceTo>VisitOps__Attendee__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Business_Purpose__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Purpose</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Location__c</fullName>
        <formula>DATETIMEVALUE(  VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c  )</formula>
        <label>Departure Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisitOps__Expense_Item__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expense Item</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Expense_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expense Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Expense_Type__c</fullName>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Air Transportation</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Gifts</fullName>
                </value>
                <value>
                    <fullName>Ground Transportation</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Photo/Video</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Signage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__LocationFormula__c</fullName>
        <formula>VisitOps__VisitopsVisit__r.VisitOps__Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LocationName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__LocationId__c</fullName>
        <formula>VisitOps__VisitopsVisit__r.VisitOps__Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LocationId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Quoted_Amount__c</fullName>
        <label>Quoted Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisitOps__Service_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__SupplierNameFormula__c</fullName>
        <formula>VisitOps__Supplier__r.VisitOps__Provider_Name__c</formula>
        <label>Supplier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>VisitOps__Supplier__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitNameFormula__c</fullName>
        <formula>VisitOps__VisitopsVisit__r.VisitOps__VisitName__c</formula>
        <label>Visit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>VisitOps__Visit__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitopsVisit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>VisitOps__Visit__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>VisitExpenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Expense_Item__c</columns>
        <columns>VisitOps__Expense_Amount__c</columns>
        <columns>VisitOps__Expense_Type__c</columns>
        <columns>VisitOps__SupplierNameFormula__c</columns>
        <columns>VisitOps__Visit__c</columns>
        <columns>VisitOps__VisitNameFormula__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EX{0000}</displayFormat>
        <label>Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>